modules/alb-controller/templates/default-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-redirect
  namespace: ${namespace}
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: ${alb_name}
    alb.ingress.kubernetes.io/group.name: ${group_name}
    alb.ingress.kubernetes.io/group.order: '1'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: ${alb_sg}
    alb.ingress.kubernetes.io/subnets: ${public_subnets}
    alb.ingress.kubernetes.io/success-codes: 200-404
    alb.ingress.kubernetes.io/actions.default-ssl-redirect: >
      {
        "Type": "redirect",
        "RedirectConfig": {
          "Protocol": "HTTPS",
          "Port": "443",
          "Host": "#{host}",
          "Path": "/#{path}",
          "Query": "#{query}",
          "StatusCode": "HTTP_301"
        }
      }
spec:
  defaultBackend:
    service:
      name: default-ssl-redirect
      port:
        name: use-annotation
